# custom_routing

./: .gitignore  CMakeLists.txt  segment_check.csv
common/: CMakeLists.txt
common/include/: CSVParser.h  Connector.h  ConnectorParser.h  GeoPoint.h  Segment.h  SegmentParser.h  UniqueId.h
common/src/: CSVParser.cpp  ConnectorParser.cpp  Segment.cpp  SegmentParser.cpp  UniqueId.cpp
task1_distance_calculator/: CMakeLists.txt
task1_distance_calculator/src/: main.cpp
